styles/responsive-flowers.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');



.noto-serif-font {
  font-family: "Noto Serif", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}
/* Shared styles  */
.display-flex{
  display: flex;
}
.text-gray{
  color: #8987A1;
}
.text-bold{
 color: #252432;
 font-weight: 700;
 font-size: 16px;
}
.text-black{
  color: #000000;
}
body{
 margin: 0;
}
/* header styles */

/* navbar related styles */
.navbar{
  justify-content: space-between;
  max-width: 1140px;
  margin: 0 auto;
  align-items: center;
}
.nav-item{
  list-style: none;
  margin-right: 30px;
}
.nav-link{
  text-decoration: none;
  font-weight: 500;
}

.banner-part{
  /* margin: 0 auto; */
  justify-content: center;
  align-items: flex-end;
  padding: 30px;
  max-width: 1140px;
  margin: 30px auto;
  background-color: #fff;
  margin-bottom: 150px;
  flex-shrink: 0;
  height: 462px;
  
}
.banner{
  flex: 1;
  padding-right: 0px;
  flex-direction: column;
  text-align: left;
}
.banner-title{
  font-size: 40px;
  margin-bottom: 20px;
  line-height: 1.2;
  /* justify-content: center; */
  /* flex-direction: column; */
}
.banner-description{
  font-size: 16px;
  line-height: 1.6;
  text-align: left;
  margin-bottom: 0px;
}
.black-text {
  color: black;
  font-weight: 700;
}

.orange-text {
  color: #E95A08;
  font-weight: 700;
}

.banner-img {
  flex: 1;
  text-align: right;
}

.banner-img img {
  max-width: 100%;
  height: auto;
}
.plant{
  margin-bottom: 200px;
}
.plant-title{
  font-size: 40px;
  font-weight: 700;
  text-align: center;
  margin: 0 auto;
}
.plant-description{
  text-align: center;
  margin-bottom: 0px;
}

.container{
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 0px;
  justify-content: center;
  align-items: flex-end;
  padding: 30px;
  max-width: 1140px;
  margin: 0px auto;
}

.plants{
  /* border: 1px solid skyblue; */
  padding: 10px;
  border-radius: 10px;
}
.plants h3{
  font-size: 22px;
  font-weight: 500;
  margin: 0px;
  line-height: 33px;
}
.plants p{
  margin-top: 5px;
  font-weight: 700;
}
.plants h3, p{
  text-align: center;
}
/* .plants img{
  width: 100%;
} */
.add-to-cart-btn{
  background-color: #E95A08;
  color: white;
  border: none;
  padding: 10px 0;
  width: 100%;
  cursor: pointer;
  font-weight: bold;
  transition: background-color 0.3s;
}

.plants-lover-section{
  justify-content: space-between;
  align-items: center;
  padding: 30px;
  max-width: 1140px;
  margin: 30px auto;
  background-color: #fff;
  margin-bottom: 150px;
  flex-shrink: 0;
  height: 462px;
}
.plants-lover-img{
  position: relative;
  flex: 1;
  min-width: 300px;
}
.flower-image{ 
  width: 540px;
  height: 597px;
  flex-shrink: 0;
}
.badge-image{
  position: absolute;
  top: 2072;
  left: 350px;
  right: 600px;
  bottom: 450px;
  /* width: 80px; */
  /* height: auto; */
  width: 286px;
  height: 286px;
  flex-shrink: 0;
}
.plant-section{
  display: flex;
  justify-content:center;
  width: 1140px;
  margin-top: 100px;
}
.plant-lover-title{
 font-size: 50px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
}

.plants-lover-section li{
  font-size: 22px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  
}
.plant-lover{
  margin-left: 50px;
  min-width: 300px;
  width: 540px;
  height: 597px;
  flex-shrink: 0;
  display: grid;
  justify-content: center;
}
.latest-section{
  display: grid;
}
.latest-title{
  font-size: 40px;
  font-weight: 700;
  text-align: center;
  margin: 0 auto;
}
.container2 {
  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 20px;
  padding: 40px;
  max-width: 1200px;
  margin: auto;
  margin-left: 160px;
  margin-right: 160px;
  /* display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 20px;
  padding: 40px;
  max-width: 1200px;
  margin: auto; */
}

.left-column {
  display: grid;
  grid-template-rows: 1fr 1fr;
  gap: 20px;
}
.card-box {
  position: relative;
  color: white;
  border-radius: 12px;
  overflow: hidden;
  min-height: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  background-size: cover;
  background-position: center;
}
.card-box::before {
  content: "";
  position: absolute;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.4);
}
.card-content {
  position: relative;
  z-index: 1;
}

.card-content h2 {
  margin: 0;
  font-size: 1.3rem;
}

.card-content a {
  margin-top: 8px;
  display: inline-block;
  font-weight: bold;
  color: white;
  text-decoration: underline;
}

.zabo-box h2 {
  font-size: 2rem;
}
.join-section{
  background-image: url(../assets/news-letter-bg.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  height: 80vh;
  align-items: center;
  justify-content: center;
  text-align: center;

}
.join-section h1{
  font-size: 2.5rem;
  font-weight: bold;
  margin-bottom: 20px;
}
.join-title{
  color: white;
  text-align: center;
  font-size: 50px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  /* align-items: center; */
  justify-content: space-around;
  margin-top: 10px;
}
.join-part{
  padding: 40px;
  /* border-radius: 10px; */
  display: flex;
  width: 830px;
  flex-direction: column;
  align-items: center;
  /* gap: 23px; */
}
.subscribe {
  display: flex;
  justify-content: center;
  gap: none;
  margin-top: 10px;
}
.subscribe input {
  display: flex;
  width: 644px;
  height: 50px;
  padding: 1px 20px;
  align-items: center;
  gap: 10px;
  border: none;
}
.subscribe button {
  background: #E95A08;
  color: white;
  display: flex;
  width: 186px;
  height: 50px;
  padding: 26px 50px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border: none;
}

footer {
  background: #f8f8f8;
  padding: 40px 20px;
  
}
.footer-description{
  text-align: left;
}
.footer-content {
  max-width: 1200px;
  margin: auto;
  display: flex;
  flex-wrap: wrap;
  gap: 30px;
  justify-content: space-around;
}

.footer-left {
  max-width: 300px;
}

.footer-left .logo {
  width: 100px;
  margin-bottom: 10px;
}

.footer-links {
  display: flex;
  gap: 70px;
}
.footer-link{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 20px;
  margin-left: auto;
}

.footer-links a {
  display: block;
  color: #6B7280;
  text-decoration: none;
  margin-bottom: 8px;
  font-size: 14px;
}

.footer-social {
  justify-content: space-evenly;
  align-items:flex-start;
  margin-top: 0px;
  display: flex;
  /* flex-wrap: wrap; */
  gap: 24px;
}

.footer img{
  width: 10%;
  gap: 32px;
}

@media  screen and (max-width: 576px) {
    .subscribe{
      align-items: center;
      justify-content: center;
      text-align: center;
      width:100%;
      margin-left: 35px;
      margin-right: 35px; 
      flex-direction: row; 
    }
  .subscribe input{
   text-align: center;
  }  
  .container{
    grid-template-columns: repeat(2, 1fr);
  }
  .nav-lin{
    display: none;
  }
   .container2{
    grid-template-columns: repeat(1, 1fr);
  }
  
  .banner-part{
    flex-direction: column-reverse;
  }
  .container2{
    margin:0px;
  }
  .latest-section{
    flex-direction: column;
  }
  .badge-image{
    display: none;
  }
  .banner-description{
    text-align: center;
  }
  .latest-description{
    margin-left: 1px;
    margin-right: 1px;
  }
  /* .plant-section{
    flex-direction: column;
  }  */
  .plant-lover{
    flex-direction: column;
  }
  .plant-description{
    margin-left: 1px;
    margin-right: 1px;
  }
  
  .footer-links{
  flex-direction: column;
  margin-left: 0px;
  }
  .footer-link{
    margin-left: 0px;
  }
  .footer-content{
    flex-direction: column;
  }
  
  .join-title{
    text-align: center;
    align-items: center;
    font-size: 1em;
    margin-left: 200px;
    margin-right: 150px;
    justify-content: center;
    margin: 0;
    font-size: 1.3rem;
  }
  }

